--- a/external/cmake/cmnalib.CMakeLists.txt.in
+++ b/external/cmake/cmnalib.CMakeLists.txt.in
@@ -6,7 +6,7 @@ project(cmnalib-download NONE)
 include(ExternalProject)
 ExternalProject_Add(cmnalib
     GIT_REPOSITORY https://github.com/falkenber9/c-mnalib.git
-    GIT_TAG falcon_v0.1
+    GIT_TAG v1.0.0
 #    GIT_TAG develop
     SOURCE_DIR "${CMAKE_BINARY_DIR}/cmnalib-src"
     BINARY_DIR "${CMAKE_BINARY_DIR}/cmnalib-build"
